--- a/package.json
+++ b/package.json
@@ -17,13 +17,12 @@
     "url": "https://github.com/webreinvent/vaahcss.git"
   },
   "devDependencies": {
-    "cross-env": "^7.0.0",
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
-    "laravel-mix": "^4.0.7",
-    "node-sass": "^4.12.0",
-    "resolve-url-loader": "^3.1.0",
-    "sass-loader": "^7.3.1"
+    "laravel-mix": "^6.0.39",
+    "sass": "^1.45.2",
+    "sass-loader": "^12.3.0",
+    "resolve-url-loader": "^3.1.0"
   },
   "keywords": [
     "bulma",
