--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "jsdelivr": "./css/vaahcss.min.css",
   "scripts": {
     "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js  --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch  --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
     "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "mix --production"
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,10 @@
   "devDependencies": {
     "fs": "0.0.1-security",
     "fs-extra": "^8.1.0",
-    "laravel-mix": "^6.0.39",
+    "laravel-mix": "^6.0.43",
+    "resolve-url-loader": "^3.1.0",
     "sass": "^1.45.2",
-    "sass-loader": "^12.3.0",
-    "resolve-url-loader": "^3.1.0"
+    "sass-loader": "^12.3.0"
   },
   "keywords": [
     "bulma",
